docs/vocabulary/_sources/1.0.0/index.rst.txt
:orphan:

Type Hierarchy
==============

.. warning::
   This is not the latest version. The latest version is :doc:`1.1.1 <../1.1.1/index>`.

This page shows the inheritance relationships and complete type index for
CLAMS Vocabulary 1.0.0.

**Previous version:** none *(this is the oldest version)*

Inheritance Tree
----------------

.. inheritance-tree::

   └── Thing (v1) | id
       ├── Alignment (v1) | source, target, sourceType, targetType
       ├── Annotation (v2) | document
       │   ├── Region (v1) | timeUnit
       │   │   ├── Interval (v1) | end, start, targets
       │   │   │   ├── Span (v1) | 
       │   │   │   └── TimeFrame (v1) | frameType
       │   │   │       └── Chapter (v1) | title
       │   │   ├── Polygon (v1) | coordinates, timePoint
       │   │   │   └── BoundingBox (v1) | boxType
       │   │   ├── TimePoint (v1) | timePoint
       │   │   └── VideoObject (v1) | polygons
       │   └── Relation (v1) | 
       └── Document (v1) | location, mime
           ├── AudioDocument (v1) | 
           ├── ImageDocument (v1) | 
           ├── TextDocument (v1) | text
           └── VideoDocument (v1) | 